src/snapshots/ruff__linter__tests__F706_F706.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: ReturnOutsideFunction
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 12
  fix: ~
- kind: ReturnOutsideFunction
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 8
  fix: ~

