src/snapshots/ruff__linter__tests__F707_F707.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: DefaultExceptNotLast
  location:
    row: 3
    column: 0
  end_location:
    row: 4
    column: 4
  fix: ~
- kind: DefaultExceptNotLast
  location:
    row: 10
    column: 0
  end_location:
    row: 11
    column: 4
  fix: ~
- kind: DefaultExceptNotLast
  location:
    row: 19
    column: 0
  end_location:
    row: 20
    column: 4
  fix: ~

