src/snapshots/ruff__linter__tests__F707_F707.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  try:
      pass
| except:
|     pass
|> An `except:` block as not the last exception handler
  except ValueError:
      pass
  
  try:
      pass
| except:
|     pass
|> An `except:` block as not the last exception handler
  except ValueError:
      pass
  finally:
      pass
  
  try:
      pass
| except:
|     pass
|> An `except:` block as not the last exception handler
  except ValueError:
      pass
  else:
      pass
  
  try:
      pass
  except:
      pass
  
  try:
      pass
  except ValueError:
      pass
  except:
      pass
  
  try:
      pass
  except ValueError:
      pass
  
  try:
      pass
  finally:
      pass

