src/snapshots/ruff__linter__tests__F722_F722.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    ForwardAnnotationSyntaxError: ///
  location:
    row: 9
    column: 12
  end_location:
    row: 9
    column: 17
  fix: ~

