src/snapshots/ruff__linter__tests__F722_F722.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  class A:
      pass
  
  
  def f() -> "A":
      pass
  
  
| def g() -> "///":
|> Syntax error in forward annotation: `///`
      pass

