src/snapshots/ruff__linter__tests__F821_F821_0.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UndefinedName: self
  location:
    row: 2
    column: 11
  end_location:
    row: 2
    column: 15
  fix: ~
- kind:
    UndefinedName: self
  location:
    row: 6
    column: 12
  end_location:
    row: 6
    column: 16
  fix: ~
- kind:
    UndefinedName: self
  location:
    row: 10
    column: 8
  end_location:
    row: 10
    column: 12
  fix: ~
- kind:
    UndefinedName: numeric_string
  location:
    row: 21
    column: 11
  end_location:
    row: 21
    column: 25
  fix: ~
- kind:
    UndefinedName: Bar
  location:
    row: 58
    column: 3
  end_location:
    row: 58
    column: 8
  fix: ~
- kind:
    UndefinedName: TOMATO
  location:
    row: 83
    column: 10
  end_location:
    row: 83
    column: 16
  fix: ~
- kind:
    UndefinedName: B
  location:
    row: 87
    column: 4
  end_location:
    row: 87
    column: 10
  fix: ~
- kind:
    UndefinedName: B
  location:
    row: 89
    column: 4
  end_location:
    row: 89
    column: 8
  fix: ~
- kind:
    UndefinedName: PEP593Test123
  location:
    row: 114
    column: 8
  end_location:
    row: 114
    column: 23
  fix: ~
- kind:
    UndefinedName: foo
  location:
    row: 122
    column: 13
  end_location:
    row: 122
    column: 18
  fix: ~
- kind:
    UndefinedName: bar
  location:
    row: 122
    column: 20
  end_location:
    row: 122
    column: 25
  fix: ~

