src/snapshots/ruff__linter__tests__F821_F821_1.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UndefinedName: Model
  location:
    row: 11
    column: 9
  end_location:
    row: 11
    column: 16
  fix: ~
- kind:
    UndefinedName: Model
  location:
    row: 18
    column: 16
  end_location:
    row: 18
    column: 23
  fix: ~

