src/snapshots/ruff__linter__tests__F821_F821_2.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UndefinedName: Model
  location:
    row: 5
    column: 11
  end_location:
    row: 5
    column: 18
  fix: ~

